hero bg changed

--- a/app/globals.css
+++ b/app/globals.css
@@ -108,7 +108,7 @@ body {
   animation: rainbow 2s ease-in-out infinite;
   background-clip: text;
   -webkit-background-clip:text;
-  color:black;
+  color:white;
   transition: color .2s ease-in-out;
   font-weight:800;
 }
