nav issue fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,20 +42,20 @@ body {
 
 }
 .dropdown-content {
-  display: none;
+  /* display: none;
   position: absolute;
   font-weight: 600;
   /* background-color: 2px solid black; */
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  /* min-width: 160px; */
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
+  /* z-index: 1; */
 }
 
 .dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  /* padding: 12px 16px;
   text-decoration: none;
-  display: block;
+  display: block; */
 }
 
 .dropdown-content a:hover {background-color: #b4b4b4;  }
@@ -86,7 +86,7 @@ body {
 
 .dropdown-content1 a {
   color: black;
-  padding: 122px 16px;
+  padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
