--- a/app/globals.css
+++ b/app/globals.css
@@ -38,13 +38,13 @@ body {
 /* Header settings */
 .dropbtn{
   color: black;
-  font-weight: 700
+  font-weight: 600;
 
 }
 .dropdown-content {
    display: none;
   position: absolute;
-  font-weight: 600;
+  /* font-weight: 600; */
    background-color: 2px solid black; 
    min-width: 160px; 
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
@@ -68,7 +68,7 @@ body {
 /* for mobile */
 .dropbtn1{
   color: black;
-  font-weight: 700;
+  font-weight: 600;
   padding-left: 8px;
   padding: 6px;
 
@@ -77,7 +77,7 @@ body {
 .dropdown-content1 {
   display: none;
   position: absolute;
-  font-weight: 600;
+  /* font-weight: 600; */
   /* background-color: 2px solid black; */
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
